@@ -3,6 +3,7 @@ xx May 2006: 0.2.12 Miek <miek@miek.nl>
    * dump.sh, restore.sh: add -a flag
    * mirror.sh, rorrim.sh: silence chown errors
    * mirror.sh, dump.sh: completed extended attribute support
+   * mirror.sh: don't echo to stderr, this fails remotely
    * when mv-ing extended attributes are preserverd
 
 
